--- a/Main.html
+++ b/Main.html
@@ -12,7 +12,7 @@
  
 <body>
    <div class = "heading">
-      <img class = "mainlogo" src = "PRIR1.PNG" alt="Logo">
+      <img class = "mainlogo" src = "NEWPRIR.png" alt="Logo">
       <h1>
           Robotics Camp at UTSA
       </h1>
@@ -64,7 +64,7 @@
    </div>
 
    <div class= "Column footer">
-      <img src = "PRIR2.png" class = "Logo2">
+      <img src = "NEWPRIR.png" class = "Logo2">
       <p>
          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
          Dolore iste, illum reprehenderit tempore eaque 
