--- a/Projects.html
+++ b/Projects.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class = "heading">
-        <img class = "Logo1" src = "PRIR1.PNG" alt="Logo">
+        <img class = "Logo1" src = "NEWPRIR.png" alt="Logo">
         <h1>
             Projects
         </h1>
@@ -40,7 +40,7 @@
 
     </div>
     <div class= "column footer">
-        <img src = "PRIR2.png" class = "Logo2">
+        <img src = "NEWPRIR.png" class = "Logo2">
         <p>
            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
            Dolore iste, illum reprehenderit tempore eaque 
