--- a/Schedule.html
+++ b/Schedule.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class = "heading">
-        <img class = "Logo1" src = "PRIR1.PNG" alt="Logo">
+        <img class = "Logo1" src = "NEWPRIR.png" alt="Logo">
         <h2 class = "title">Welcome/ Opening Day</h2>
     </div>
 
