--- a/Schedule.html
+++ b/Schedule.html
@@ -25,9 +25,9 @@
     <br>
 
     <div class = "boxed">
-        <img style = "border: 8px solid #008080;" src = "cover1.jpeg" width = "200">
-        <img style = "border: 8px solid #008080;" src = "cover2.jpeg" width = "200">
-        <img style = "border: 8px solid #008080;" src = "cover3.jpeg" width = "200">
+        <img style = "border: 8px solid #ff7f35;" src = "cover1.jpeg" width = "200">
+        <img style = "border: 8px solid #ff7f35;" src = "cover2.jpeg" width = "200">
+        <img style = "border: 8px solid #ff7f35;" src = "cover3.jpeg" width = "200">
     </div>
 
     <div class = "column side">
