--- a/Main.html
+++ b/Main.html
@@ -29,13 +29,13 @@
       <h2 class = "title"> About the Camp </h2>
       <p>Here at UTSA, high school girls with high achieving academic levels are able to experience
          first hand experience on the STEM and engineering field. The girls are able to work with 
-         graduate students and professors who are knowledgable in their field to learn to apply their
-         knowledge to projects and research. 
+         graduate students and professors who are knowledgable in their field to learn and apply their
+         knowledge to local projects and research. 
          </p>
       <p>
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, exercitationem? 
-         Voluptates, facilis quis quas iusto porro blanditiis reprehenderit
-          asperiores distinctio tempora minima repudiandae quia aspernatur, facere necessitatibus voluptate laboriosam hic.
+         The campers are able to challenge themselves through rigorous coursework throughout the month
+         of July, and learn to be familiar with multiple 
+         softwares that will be utilized in college and future careers. 
       </p>
    </div>
       
@@ -66,13 +66,11 @@
    <div class= "Column footer">
       <img src = "NEWPRIR.png" class = "Logo2">
       <p>
-         Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-         Dolore iste, illum reprehenderit tempore eaque 
-         praesentium ex laboriosam aspernatur, porro mollitia 
-         maxime dolorum hic quam alias, omnis quo sunt ratione consequuntur?
+         Contact Us 📩 <br></br> 
+         zhifeng.han@usta.edu<br></br> 
+         claire.walton@utsa.edu
          <br></br>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae expedita iusto quas, numquam in, 
-         fuga hic nihil mollitia assumenda modi nulla inventore dolor nobis maxime at repellendus animi enim delectus.
+         <a href = "2022Calender.html">2022 Camp Calender</br> </a>
 
       </p>
       
