--- a/Main.html
+++ b/Main.html
@@ -70,7 +70,7 @@
          zhifeng.han@usta.edu<br></br> 
          claire.walton@utsa.edu
          <br></br>
-         <a href = "2022Calender.html">2022 Camp Calender</br> </a>
+         <a style = "color: white" href = "2022Calender.html">2022 Camp Calender</br></a>
 
       </p>
       
