--- a/Main.html
+++ b/Main.html
@@ -27,7 +27,9 @@
    
    <div class = "maincolumn">
       <h2 class = "title"> About the Camp </h2>
-      <p>Here at UTSA, high school girls with high achieving academic levels are able to experience
+      <p>
+         Helllo can you see me?
+         Here at UTSA, high school girls with high achieving academic levels are able to experience
          first hand experience on the STEM and engineering field. The girls are able to work with 
          graduate students and professors who are knowledgable in their field to learn and apply their
          knowledge to local projects and research. 
