Added a new page of code

--- a/Projects.html
+++ b/Projects.html
@@ -22,6 +22,7 @@
         <a href = "Main.html">Main Page</a>
         <a href = "Projects.html">Projects</a>
         <a href ="Schedule.html">Schedule</a>
+        <a href = "Participants.html">Partcipants</a>
     </div>
     <div class = "column side">
         <h3>List</h3>
