--- a/Main.html
+++ b/Main.html
@@ -1,85 +1,86 @@
 <DOCTYPE! html>
-<html lang="en">   
+   <html lang="en">
+
    <head>
-      <link rel = "stylesheet" href = "style.css">
+      <link rel="stylesheet" href="style.css">
+      <link rel="icon" href = "NEWPRIR.png">
 
-   <meta charset = "utf-8">
-   <meta name = "viewport" content = "width=device-width initial-scale=1">
-   <title> Robotics Camp at UTSA</title>
+      <meta charset= "utf-8">
+      <meta name="viewport" content="width=device-width initial-scale=1">
+      <title> Robotics Camp at UTSA</title>
 
-</head>
-</html>
- 
-<body>
-   <div class = "heading">
-      <img class = "mainlogo" src = "NEWPRIR.png" alt="Logo">
-      <h1>
-          Robotics Camp at UTSA
-      </h1>
-   </div>
+   </head>
 
-   
-   <div class ="navbar">
-      <a href = "Main.html">Main Page</a>
-      <a href ="Projects.html"> Projects</a>
-      <a href ="Schedule.html">Schedule</a>
-   </div>
-   
-   <div class = "maincolumn">
-      <h2 class = "title"> About the Camp </h2>
-      <p>
-         Helllo can you see me?
-         Here at UTSA, high school girls with high achieving academic levels are able to experience
-         first hand experience on the STEM and engineering field. The girls are able to work with 
-         graduate students and professors who are knowledgable in their field to learn and apply their
-         knowledge to local projects and research. 
+   </html>
+
+   <body>
+      <div class="heading">
+         <img class="mainlogo" src="NEWPRIR.png" alt="Logo">
+         <h1>
+            Robotics Camp at UTSA
+         </h1>
+      </div>
+
+
+      <div class="navbar">
+         <a href="Main.html">Main Page</a>
+         <a href = "Participants.html">Partcipants</a>
+         <a href="Projects.html"> Projects</a>
+         <a href="Schedule.html">Schedule</a>
+      </div>
+
+      <div class="maincolumn">
+         <h2 class="title"> About the Camp </h2>
+         <p>
+            Here at UTSA, high school girls with high achieving academic levels are able to experience
+            first hand experience on the STEM and engineering field. The girls are able to work with
+            graduate students and professors who are knowledgable in their field to learn and apply their
+            knowledge to local projects and research.
          </p>
-      <p>
-         The campers are able to challenge themselves through rigorous coursework throughout the month
-         of July, and learn to be familiar with multiple 
-         softwares that will be utilized in college and future careers. 
-      </p>
-   </div>
-      
-   <div class ="Column1">
-      <h2 class = "title">Programming</h2>
-      <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat unde eveniet enim delectus
-          tempore facilis ullam facere nihil ipsam at, temporibus
-          officiis nesciunt exercitationem assumenda molestias magnam autem? Voluptatem, laudantium?
-      </p>
-   </div>
-   
-   <div class ="Column2">
-      <h2 class = "title">Hands On Projects</h2>
-      <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat unde eveniet enim delectus
-          tempore facilis ullam facere nihil ipsam at, temporibus
-          officiis nesciunt exercitationem assumenda molestias magnam autem? Voluptatem, laudantium?
-      </p>
-   </div>
+         <p>
+            The campers are able to challenge themselves through rigorous coursework throughout the month
+            of July, and learn to be familiar with multiple
+            softwares that will be utilized in college and future careers.
+         </p>
+      </div>
 
-   <div class = "Column3">
-      <h2 class = "title">Robotics</h2>
-      <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat unde eveniet enim delectus
-          tempore facilis ullam facere nihil ipsam at, temporibus
-          officiis nesciunt exercitationem assumenda molestias magnam autem? Voluptatem, laudantium?
-      </p>
-   </div>
+      <div class="Column1">
+         <h2 class="title">Programming</h2>
+         <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat unde eveniet enim delectus
+            tempore facilis ullam facere nihil ipsam at, temporibus
+            officiis nesciunt exercitationem assumenda molestias magnam autem? Voluptatem, laudantium?
+         </p>
+      </div>
 
-   <div class= "Column footer">
-      <img src = "NEWPRIR.png" class = "Logo2">
-      <p>
-         Contact Us 📩 <br></br> 
-         zhifeng.han@usta.edu<br></br> 
-         claire.walton@utsa.edu
-         <br></br>
-         <a style = "color: white" href = "2022calender.jpeg">2022 Camp Calender</a>
-         <br></br> 
-         <a style = "color: white" href = "https://www.utsa.edu/">UTSA Website</br></a>
+      <div class="Column2">
+         <h2 class="title">Hands On Projects</h2>
+         <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat unde eveniet enim delectus
+            tempore facilis ullam facere nihil ipsam at, temporibus
+            officiis nesciunt exercitationem assumenda molestias magnam autem? Voluptatem, laudantium?
+         </p>
+      </div>
 
-      </p>
-      
-   </div>
+      <div class="Column3">
+         <h2 class="title">Robotics</h2>
+         <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat unde eveniet enim delectus
+            tempore facilis ullam facere nihil ipsam at, temporibus
+            officiis nesciunt exercitationem assumenda molestias magnam autem? Voluptatem, laudantium?
+         </p>
+      </div>
 
-</body>
+      <div class="Column footer">
+         <img src="NEWPRIR.png" class="Logo2">
+         <p>
+            Contact Us 📩 <br></br>
+            zhifeng.han@usta.edu<br></br>
+            claire.walton@utsa.edu
+            <br></br>
+            <a style="color: white" href="2022calender.jpeg">2022 Camp Calender</a>
+            <br></br>
+            <a style="color: white" href="https://www.utsa.edu/">UTSA Website</br></a>
 
+         </p>
 
+      </div>
+
+   </body>
