rearrange the files to be more organized, added a few pages to the web, and created a list of the schedule pages

--- a/Html/Main.html
+++ b/Html/Main.html
@@ -21,7 +21,6 @@
          </h1>
       </div>
 
-
       <div class="navbar">
          <a href="Main.html">Main Page</a>
          <a href = "Participants.html">Partcipants</a>
@@ -66,6 +65,10 @@
             tempore facilis ullam facere nihil ipsam at, temporibus
             officiis nesciunt exercitationem assumenda molestias magnam autem? Voluptatem, laudantium?
          </p>
+      </div>
+
+      <div class="picture">
+         <img src = "cover3.jpeg" width = 300px>
       </div>
 
       <div class="Column footer">
