--- a/Mingye.html
+++ b/Mingye.html
@@ -10,10 +10,18 @@
 </html>
 
 <body>
+
+    <heading>
+        <h1>
+            Sunny
+        </h1>
+    </heading>
+
     <div class= "navbar">
         <a href = "Main.html">Main Page</a>
-        <a href = "Participants.html">Partcipants</a>
-        <a href = "Projects.html">Projects</a>
-        <a href ="Schedule.html">Schedule</a>
+        <a href = ""></a>
+        <a href = "Participants.html">Projects</a>
         
     </div>
+
+</body>
