--- a/Main.html
+++ b/Main.html
@@ -48,7 +48,9 @@
          <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat unde eveniet enim delectus
             tempore facilis ullam facere nihil ipsam at, temporibus
             officiis nesciunt exercitationem assumenda molestias magnam autem? Voluptatem, laudantium?
+            
          </p>
+         <img src = "codes.png" width = 150px>
       </div>
 
       <div class="Column2">
