--- a/Participants.html
+++ b/Participants.html
@@ -37,7 +37,7 @@
          </p>
      </div>
 
-      <h2 class = "title">Campers of 2022</h2>
+      <h2 class = "title">2022 Campers</h2>
 
       <div class = "Camper">
          <h3 class = "title"> Mingye He (Sunny)</h3>
@@ -48,15 +48,17 @@
          </p>
       </div>
 
-      <br>
+      <!--<br>-->
 
       <div class = "Camper">
-         <h3 class = "title"> Tiffany Dai</h3>
-         <a href = "Tiffany.html">See my page</a>
+         <h3 class = "title"> Xiaoqiang (Tiffany) Dai</h3>
+         
          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci porro corporis at saepe 
-            tenetur molestias repellendus nisi, sit illum, deserunt nemo 
-            dolor sunt animi debitis quibusdam quasi aut, numquam maiores.
+            Hello everyone, my name is Tiffany. I am an incoming Junior 
+            in high school this year. I was able to learn a lot in the field that
+            I am intrested in during the duration of this summer. From learning matrix manipulation 
+            in Python to 3D Printing design, I did many different things here at UTSA. <a href = "Tiffany.html">Click here</a> to see my page! 
+
          </p>
       </div>
 
