--- a/Schedule.html
+++ b/Schedule.html
@@ -32,29 +32,15 @@
         <img style = "border: 8px solid #ff7f35;" src = "cover3.jpeg" width = "200">
     </div>
 
+</br> 
+
     <div class = "column side" >
         <div class = "list">
             <h3>List</h3>
-            <a href = "#1">Day 1</a>
-            <a href = "#2">Day 2</a>
-            <a href = "#3">Day 3</a>
-            <a href = "#4">Day 4</a>
-            <a href = "#5">Day 5</a>
-            <a href = "#6">Day 6</a>
-            <a href = "#7">Day 7</a>
-            <a href = "#8">Day 8</a>
-            <a href = "#9">Day 9</a>
-         <a href = "#10">Day 10</a>
-         <a href = "#11">Day 11</a>
-         <a href = "#12">Day 12</a>
-         <a href = "#13">Day 13</a>
-         <a href = "#14">Day 14</a>
-         <a href = "#15">Day 15</a>
-         <a href = "#16">Day 16</a>
-         <a href = "#17">Day 17</a>
-         <a href = "#18">Day 18</a>
-         <a href = "#19">Day 19</a>
-         <a href = "#20">Day 20</a>
+            <a href = "week1.html">Week 1</a>
+            <a href = "week2.html">Week 2</a>
+            <a href = "week3.html">Week 3</a>
+            <a href = "week4.html">Week 4</a>
 
         </div>
         
