--- a/HTML/week2.html
+++ b/HTML/week2.html
@@ -1,10 +1,8 @@
 <DOCTYPE! html>
 <html lang="en">
     <head>
-        <link rel = "stylesheet" href = "CSS/style.css">
+        <link rel = "stylesheet" href = "style.css">
         <meta name = "viewport" content = "width=device-width initial-scale=1">
-        <script type = "text/javascript"></script>
-        <script type = "text/javascript" src = "custom.js"></script>
     <meta charset = "utf-8">
     <title>Week 2</title>
 
