--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -2,8 +2,8 @@
    <html lang="en">
 
    <head>
-      <link rel="stylesheet" href= "style.css">
-      <link rel="icon" href = "NEWPRIR.png">
+      <link rel="stylesheet" href= "/CSS/style.css">
+      <link rel="icon" href = "/Pictures/NEWPRIR.png">
 
       <meta charset= "utf-8">
       <meta name="viewport" content="width=device-width initial-scale=1">
@@ -15,7 +15,7 @@
 
    <body>
       <div class="heading">
-         <img class="mainlogo" src="NEWPRIR.png" alt="Logo">
+         <img class="mainlogo" src="/Pictures/NEWPRIR.png" alt="Logo">
          <h1>
             Robotics Camp at UTSA
          </h1>
@@ -23,9 +23,9 @@
 
       <div class="navbar">
          <a href="Main.html">Main Page</a>
-         <a href = "Participants.html">Partcipants</a>
          <a href="Projects.html"> Projects</a>
          <a href="Schedule.html">Schedule</a>
+         <a href = "Participants.html">Partcipants</a>
       </div>
 
       <div class="maincolumn">
@@ -50,7 +50,7 @@
             officiis nesciunt exercitationem assumenda molestias magnam autem? Voluptatem, laudantium?
             
          </p>
-         <img src = "codes.png" width = 150px>
+         <img src = "/Pictures/codes.png" width = 150px>
       </div>
 
       <div class="Column2">
@@ -70,17 +70,17 @@
       </div>
 
       <div class="picture">
-         <img src = "cover3.jpeg" width = 300px>
+         <img src = "/Pictures/2022calender.jpeg" width = 300px>
       </div>
 
       <div class="Column footer">
-         <img src="NEWPRIR.png" class="Logo2">
+         <img src="/Pictures/NEWPRIR.png" class="Logo2">
          <p>
             Contact Us 📩 <br></br>
             zhifeng.han@usta.edu<br></br>
             claire.walton@utsa.edu
             <br></br>
-            <a style="color: white" href="2022calender.jpeg">2022 Camp Calender</a>
+            <a style="color: white" href="/Pictures/2022calender.jpeg">2022 Camp Calender</a>
             <br></br>
             <a style="color: white" href="https://www.utsa.edu/">UTSA Website</br></a>
 
