--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <meta charset = "utf-8">
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "/CSS/style.css">
     <meta name = "viewport" content = "width=device-width initial-scale=1">
     <title>Projects</title>
 
@@ -12,7 +12,7 @@
 
 <body>
     <div class = "heading">
-        <img class = "Logo1" src = "NEWPRIR.png" alt="Logo">
+        <img class = "Logo1" src = "/Pictures/NEWPRIR.png" alt="Logo">
         <h1>
             Projects
         </h1>
@@ -41,7 +41,7 @@
 
     </div>
     <div class= "column footer">
-        <img src = "NEWPRIR.png" class = "Logo2">
+        <img src = "/Pictures/NEWPRIR.png" class = "Logo2">
         <p>
            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
            Dolore iste, illum reprehenderit tempore eaque 
