--- a/HTML/Schedule.html
+++ b/HTML/Schedule.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html lang="en">
     <head>
-        <link rel = "stylesheet" href = "style.css">
+        <link rel = "stylesheet" href = "/CSS/style.css">
         <meta name = "viewport" content = "width=device-width initial-scale=1">
     <meta charset = "utf-8">
     <title>Schedule</title>
@@ -11,7 +11,7 @@
 
 <body>
     <div class = "heading">
-        <img class = "Logo1" src = "NEWPRIR.png" alt="Logo">
+        <img class = "Logo1" src = "/Pictures/NEWPRIR.png" alt="Logo">
         <h2 class = "title">Schedules</h2>
     </div>
 
@@ -19,20 +19,12 @@
  
     <div class= "navbar">
         <a href = "Main.html">Main Page</a>
-        <a href = "Participants.html">Partcipants</a>
         <a href = "Projects.html">Projects</a>
         <a href ="Schedule.html">Schedule</a>
+        <a href = "Participants.html">Partcipants</a>
         
     </div>
     <br>
-
-    <div class = "boxed">
-        <img style = "border: 8px solid #ff7f35;" src = "cover1.jpeg" width = "200">
-        <img style = "border: 8px solid #ff7f35;" src = "cover2.jpeg" width = "200">
-        <img style = "border: 8px solid #ff7f35;" src = "cover3.jpeg" width = "200">
-    </div>
-
-</br> 
 
     <div class = "column side" >
         <div class = "list">
@@ -45,6 +37,10 @@
         </div>
         
     </div>
+
+    <div class="picture">
+        <img src = "/Pictures/2022calender.jpeg" width = 300px>
+     </div>
 
     <div class = "Column middle">
         <div class = "box">
@@ -254,5 +250,20 @@
         </div>
 
     </div>
+
+    <div class="Column footer">
+        <img src="/Pictures/NEWPRIR.png" class="Logo2">
+        <p>
+           Contact Us 📩 <br></br>
+           zhifeng.han@usta.edu<br></br>
+           claire.walton@utsa.edu
+           <br></br>
+           <a style="color: white" href="/Pictures/2022calender.jpeg">2022 Camp Calender</a>
+           <br></br>
+           <a style="color: white" href="https://www.utsa.edu/">UTSA Website</br></a>
+
+        </p>
+
+     </div>
 
 </body>
