--- a/HTML/Mingye.html
+++ b/HTML/Mingye.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html lang="en">
     <head>
-        <link rel = "stylesheet" href = "sunny-style.css">
+        <link rel = "stylesheet" href = "/CSS/sunny-style.css">
         <meta name = "viewport" content = "width=device-width initial-scale=1">
     <meta charset = "utf-8">
     <title>Profile</title>
