--- a/HTML/Participants.html
+++ b/HTML/Participants.html
@@ -2,7 +2,7 @@
    <html lang="en">
 
    <head>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="/CSS/style.css">
       <link rel="icon" href = "NEWPRIR.png">
 
       <meta charset= "utf-8">
@@ -15,7 +15,7 @@
 
    <body>
       <div class="heading">
-         <img class="mainlogo" src="NEWPRIR.png" alt="Logo">
+         <img class="mainlogo" src="/Pictures/NEWPRIR.png" alt="Logo">
          <h1>
             Robotics Camp at UTSA
          </h1>
@@ -60,6 +60,20 @@
             in Python to 3D Printing design, I did many different things here at UTSA. <a href = "Tiffany.html">Click here</a> to see my page! 
 
          </p>
+      </div>
+
+      <div class="Column footer">
+         <img src="/Pictures/NEWPRIR.png" class="Logo2">
+         <p>
+            Contact Us 📩 <br></br>
+            zhifeng.han@usta.edu<br></br>
+            claire.walton@utsa.edu
+            <br></br>
+            <a style="color: white" href="/Pictures/2022calender.jpeg">2022 Camp Calender</a>
+            <br></br>
+            <a style="color: white" href="https://www.utsa.edu/">UTSA Website</br></a>
+         </p>
+ 
       </div>
 
     </body>
