--- a/week2.html
+++ b/week2.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html lang="en">
     <head>
-        <link rel = "stylesheet" href = "CSS/style.css">
+        <link rel = "stylesheet" href = "/CSS/style.css">
         <meta name = "viewport" content = "width=device-width initial-scale=1">
         <script type = "text/javascript"></script>
         <script type = "text/javascript" src = "custom.js"></script>
