fix the Navigation bar

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -21,12 +21,13 @@
          </h1>
       </div>
 
-      <div class="navbar">
-         <a href="Main.html">Main Page</a>
-         <a href="Projects.html"> Projects</a>
-         <a href="Schedule.html">Schedule</a>
-         <a href = "Participants.html">Partcipants</a>
-      </div>
+      <div class= "navbar">
+         <a href = "/HMTL/Main.html">Main Page</a>
+         <a href = "/HTML/Participants.html">Partcipants</a>
+         <a href = "/HTML/Projects.html">Projects</a>
+         <a href ="/HTML/Schedule.html">Schedule</a>
+         
+     </div>
 
       <div class="maincolumn">
          <h2 class="title"> About the Camp </h2>
