--- a/HTML/Participants.html
+++ b/HTML/Participants.html
@@ -22,12 +22,13 @@
       </div>
 
 
-      <div class="navbar">
-         <a href="Main.html">Main Page</a>
-         <a href = "Participants.html">Partcipants</a>
-         <a href="Projects.html"> Projects</a>
-         <a href="Schedule.html">Schedule</a>
-      </div>
+      <div class= "navbar">
+         <a href = "/HMTL/Main.html">Main Page</a>
+         <a href = "/HTML/Participants.html">Partcipants</a>
+         <a href = "/HTML/Projects.html">Projects</a>
+         <a href ="/HTML/Schedule.html">Schedule</a>
+         
+     </div>
 
       <div class = "column side">
          <h3>List</h3>
