--- a/HTML/Schedule.html
+++ b/HTML/Schedule.html
@@ -14,14 +14,12 @@
         <img class = "Logo1" src = "/Pictures/NEWPRIR.png" alt="Logo">
         <h2 class = "title">Schedules</h2>
     </div>
-
-    
  
     <div class= "navbar">
-        <a href = "Main.html">Main Page</a>
-        <a href = "Projects.html">Projects</a>
-        <a href ="Schedule.html">Schedule</a>
-        <a href = "Participants.html">Partcipants</a>
+        <a href = "/HMTL/Main.html">Main Page</a>
+        <a href = "/HTML/Participants.html">Partcipants</a>
+        <a href = "/HTML/Projects.html">Projects</a>
+        <a href ="/HTML/Schedule.html">Schedule</a>
         
     </div>
     <br>
