--- a/HTML/week1.html
+++ b/HTML/week1.html
@@ -18,10 +18,10 @@
     
  
     <div class= "navbar">
-        <a href = "Main.html">Main Page</a>
-        <a href = "Participants.html">Partcipants</a>
-        <a href = "Projects.html">Projects</a>
-        <a href ="Schedule.html">Schedule</a>
+        <a href = "/HMTL/Main.html">Main Page</a>
+        <a href = "/HTML/Participants.html">Partcipants</a>
+        <a href = "/HTML/Projects.html">Projects</a>
+        <a href ="/HTML/Schedule.html">Schedule</a>
         
     </div>
 
