--- a/week2.html
+++ b/week2.html
@@ -16,14 +16,12 @@
         <img class = "Logo1" src = "NEWPRIR.png" alt="Logo">
         <h2 class = "title">Week 2</h2>
     </div>
-
-    
  
     <div class= "navbar">
-        <a href = "Main.html">Main Page</a>
-        <a href = "Participants.html">Partcipants</a>
-        <a href = "Projects.html">Projects</a>
-        <a href ="Schedule.html">Schedule</a>
+        <a href = "/HMTL/Main.html">Main Page</a>
+        <a href = "/HTML/Participants.html">Partcipants</a>
+        <a href = "/HTML/Projects.html">Projects</a>
+        <a href ="/HTML/Schedule.html">Schedule</a>
         
     </div>
 
