--- a/week2.html
+++ b/week2.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class = "heading">
-        <img class = "Logo1" src = "NEWPRIR.png" alt="Logo">
+        <img class = "Logo1" src = "/Pictures/NEWPRIR.png" alt="Logo">
         <h2 class = "title">Week 2</h2>
     </div>
  
