--- a/HTML/week3.html
+++ b/HTML/week3.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html lang="en">
     <head>
-        <link rel = "stylesheet" href = "style.css">
+        <link rel = "stylesheet" href = "/CSS/week.css">
         <meta name = "viewport" content = "width=device-width initial-scale=1">
     <meta charset = "utf-8">
     <title>Week 3</title>
@@ -11,7 +11,7 @@
 
 <body>
     <div class = "heading">
-        <img class = "Logo1" src = "NEWPRIR.png" alt="Logo">
+        <img class = "Logo1" src = "/Pictures/NEWPRIR.png" alt="Logo">
         <h2 class = "title">Week 3</h2>
     </div>
 
@@ -95,3 +95,18 @@
             </ul>
         </p>
     </div>
+    <div class="Column footer">
+        <img src="/Pictures/NEWPRIR.png" class="Logo2">
+        <p>
+           Contact Us 📩 <br></br>
+           zhifeng.han@usta.edu<br></br>
+           claire.walton@utsa.edu
+           <br></br>
+           <a style="color: white" href="/Pictures/2022calender.jpeg">2022 Camp Calender</a>
+           <br></br>
+           <a style="color: white" href="https://www.utsa.edu/">UTSA Website</br></a>
+
+        </p>
+
+     </div>
+    </body>
