--- a/HTML/week1.html
+++ b/HTML/week1.html
@@ -18,7 +18,7 @@
     
  
     <div class= "navbar">
-        <a href = "/HMTL/Main.html">Main Page</a>
+        <a href = "/HTML/Main.html">Main Page</a>
         <a href = "/HTML/Participants.html">Partcipants</a>
         <a href = "/HTML/Projects.html">Projects</a>
         <a href ="/HTML/Schedule.html">Schedule</a>
@@ -39,7 +39,7 @@
                     <li>Organizing Github accounts and familiarizing with HTML code</li>
                 </ul>
             </p>
-
+        
         </div>
 
         <br>
@@ -89,8 +89,9 @@
                     <li>Start Project #1</li>
                     <li>Start planning for Friday's Dumpling Party</li>
                 </ul>
-                <img src = "" alt = "Tiffany presents her presentation">
-                <img src = "" alt = "Discussion with Dr. Walton on the importances of Mathematics in Engineering and AI networks.">
+                    <img class = "pic" src = "/Pictures/Meeting with Dr. Walton/IMG_20220707_131312.jpg" alt = "Tiffany presents her presentation">
+                    <img class = "pic" src = "/Pictures/Meeting with Dr. Walton/IMG_20220707_131525.jpg">
+                    <img class = "pic" src = "/Pictures/Meeting with Dr. Walton/IMG_20220707_133112.jpg" alt = "Discussion with Dr. Walton on the importances of Mathematics in Engineering and AI networks.">
             </p>
 
         </div>
@@ -103,14 +104,14 @@
             </h3>
             <p>
                 <ul>
-                    <li>Continue <a href ="Projects.html">Project 1</a></li>
+                    <li>Continue <a href ="/HTML/Projects.html">Project 1</a></li>
                     <li>Continue building website</li>
                     <li>Homemade Dumpling Party</li>
                 </ul>
             </p>
         </div>
 
-        <br>ss
+        <br>
 
         <div class="Column footer">
             <img src="/Pictures/NEWPRIR.png" class="Logo2">
