--- a/HTML/week2.html
+++ b/HTML/week2.html
@@ -107,19 +107,6 @@
             </ul>
         </p>
     </div>
-    <div class="Column footer">
-        <img src="/Pictures/NEWPRIR.png" class="Logo2">
-        <p>
-           Contact Us 📩 <br></br>
-           zhifeng.han@usta.edu<br></br>
-           claire.walton@utsa.edu
-           <br></br>
-           <a style="color: white" href="/Pictures/2022calender.jpeg">2022 Camp Calender</a>
-           <br></br>
-           <a style="color: white" href="https://www.utsa.edu/">UTSA Website</br></a>
-
-        </p>
-
-     </div>
-
     <br>
+    
+</body>
