Added pictures the week pages, restyle and formatted the Schedule Page, and  week Pages, change the Link on the Partcipants Page, Added a Gallery page for more Pictures

--- a/HTML/Participants.html
+++ b/HTML/Participants.html
@@ -23,26 +23,27 @@
 
 
       <div class= "navbar">
-         <a href = "/HMTL/Main.html">Main Page</a>
+         <a href = "/HTML/Main.html">Main Page</a>
          <a href = "/HTML/Participants.html">Partcipants</a>
          <a href = "/HTML/Projects.html">Projects</a>
          <a href = "/HTML/Schedule.html">Schedule</a>
+         <a href = "/HTML/Gallery.html">Gallery</a>
          
      </div>
+     <br>
+     <div class = "column side" >
+      <div class = "list">
+          <h3>Participants</h3>
+          <a href = "#2022 Campers"> 2022 Campers</a>
+      </div> 
+  </div>
 
-      <div class = "column side">
-         <h3>List</h3>
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-             Iusto, provident quas? Sint maiores debitis voluptate molestias impedit commodi. 
-             Voluptas ut ducimus quia nisi voluptates harum facilis eveniet vel numquam vero.
-         </p>
-     </div>
-
-      <h2 class = "title">2022 Campers</h2>
+      <h2 class = "title" id = "2022 Camprers">2022 Campers</h2>
 
       <div class = "Camper">
-         <h3 class = "title"> Mingye He (Sunny)</h3>
-         <a href = "Mingye.html">see my page</a>
+         <h3 class = "title"> 
+            <a href = "/HTML/Mingye.html">Mingye He (Sunny)</a>
+         </h3>
          <p>
             Hi, I'm Sunny. I am one of the first participants of this camp. Throughout of the camp, I learned many things such as coding
             in Python, Neural Network, 3D Printing, and etc. Visit my Profile to see all my notes and projects that I have done.
