--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -23,6 +23,7 @@
         <a href = "/HTML/Participants.html">Partcipants</a>
         <a href = "/HTML/Projects.html">Projects</a>
         <a href ="/HTML/Schedule.html">Schedule</a>
+        <a href = "/HTML/Gallery.html">Gallery</a>
         
     </div>
     <div class = "column side">
