worked on the main page and added pictures

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -50,9 +50,8 @@
          <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat unde eveniet enim delectus
             tempore facilis ullam facere nihil ipsam at, temporibus
             officiis nesciunt exercitationem assumenda molestias magnam autem? Voluptatem, laudantium?
-            
+
          </p>
-         <img src = "/Pictures/codes.png" width = 150px>
       </div>
 
       <div class="Column2">
@@ -71,8 +70,9 @@
          </p>
       </div>
 
-      <div class="picture">
-         <img src = "/Pictures/2022calender.jpeg" width = 300px>
+      <div class = "section">
+         <img class = "mainpic" src = "/Pictures/cover3.jpeg">
+         <img  class = "mainpic" src = "/Pictures/cover1.jpeg">
       </div>
 
       <div class="Column footer">
