I linked some of my github notes to the a tags

--- a/HTML/Mingye.html
+++ b/HTML/Mingye.html
@@ -95,10 +95,8 @@
           <br>
             <p>Here are the notes that I took during the camp. This allow include notes on the different codes I learned.
                 <li>
-                    <a href = "">Python Notes</a>
-                    <a href = "">HTML Notes</a>
-                    <a href = "">CSS Notes</a>
-                    <a href="">Website Notes</a>
+                    <a href = "https://github.com/Mingye-He/Python_notes">Python Notes</a>
+                    <a href = "https://github.com/Mingye-He/WebNotes">HTML Notes (Includes HTML, CSS, and Javascript)</a>
                 </li>
             </p>
             
@@ -117,6 +115,7 @@
                 <li>
                     <a href = "https://github.com/Mingye-He/UTSA_RoboticsCampWeb"> Website (the currently website you are looking at)</a>
                     <a href = ""> 3D Printing </a>
+                    
                 </li>
             </p>
         </div>
