--- a/HTML/Mingye.html
+++ b/HTML/Mingye.html
@@ -114,6 +114,7 @@
             <h2 id = "notes">CSS Notes</h2>
           <br>
             <p>Here are the notes that I took during the camp. This allow include notes on the different codes I learned.
+                <br>
                 <button class = "btn">
                     <a href = "https://github.com/Mingye-He/CSSNotes">CSS Notes</a>
                 </button>
@@ -141,13 +142,14 @@
             <h2 id = "notes">HTML Notes</h2>
           <br>
             <p>Here are the notes that I took during the camp. This allow include notes on the different codes I learned.
+                <br>
                 <button class = "btn">
                     <a href = "https://github.com/Mingye-He/HTMLNotes">HTML Notes</a>
                 </button>
                     <br>
                     <!-- <a href = "">HTML Notes (Includes HTML, CSS, and Javascript)</a> -->
                     <embed src="/Sunny's Notes/Html - Basic Tags.md" type="text/markdown" height = "300px" width="200">
-                    <embed src="/Sunny's Notes/HTML - Meta Tag.md" type="text/markdown" height = "300px" width="200">
+                    <embed src="/Sunny's Notes/HTML - Meta Tag.md" type="application/markdown" height = "300px" width="200">
             </p>
             
         </div>
